feat!: upgrade to Spring Boot 4.1.0